Bug 391123 - Crash [@ nsHTMLComboboxListAccessible::GetState] with moving option and setting display: none on select r=aaronleventhal a=dsicore